@@ -2,6 +2,10 @@
 
 Changes with Apache 2.4.26
 
+  *) mod_http2: Fix for possible CPU busy loop introduced in v1.10.3 where a stream may keep
+     the session in continuous check for state changes that never happen. 
+     [Stefan Eissing]
+
   *) mod_mime: Fix error checking for quoted pairs.  [Yann Ylavic]
 
   *) mod_proxy_wstunnel: Add "upgrade" parameter to allow upgrade to other
